crucible-cli/test-data/simulate/loop-err.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* in main test-data/simulate/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:i)
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:27:12
    eq 0 (intMod (intSum (intMul 2 cx@0:i)) 6)
Prove:
  test-data/simulate/loop-err.cbl:27:5: error: in main
  oopsie!
  false
COUNTEREXAMPLE
Assuming:
* in main test-data/simulate/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:i)
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:20:13
    not (eq 0 (intMod (intSum (intMul 2 cx@0:i)) 6))
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:27:12
    eq 0 (intMod (intSum (intMul 4 cx@0:i)) 6)
Prove:
  test-data/simulate/loop-err.cbl:27:5: error: in main
  oopsie!
  false
PROVED
Assuming:
* in main test-data/simulate/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:i)
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:20:13
    not (eq 0 (intMod (intSum (intMul 2 cx@0:i)) 6))
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:20:13
    not (eq 0 (intMod (intSum (intMul 4 cx@0:i)) 6))
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:27:12
    eq 0 (intMod (intSum (intMul 2 cx@0:i)) 6)
Prove:
  test-data/simulate/loop-err.cbl:27:5: error: in main
  oopsie!
  false
PROVED
Assuming:
* in main test-data/simulate/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:i)
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:20:13
    not (eq 0 (intMod (intSum (intMul 2 cx@0:i)) 6))
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:20:13
    not (eq 0 (intMod (intSum (intMul 4 cx@0:i)) 6))
* The branch in main from test-data/simulate/loop-err.cbl:17:5 to test-data/simulate/loop-err.cbl:20:13
    not (eq 0 (intMod (intSum (intMul 2 cx@0:i)) 6))
Prove:
  test-data/simulate/loop-err.cbl:23:5: error: in main
  nonzero
  not (intLe (intSum (intMul 8 cx@0:i)) 0)
PROVED
